# fabrica-contenidos-ai-in-the-loop

./: .env.example  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FILOSOFIA.md  PRD.md  README.md  RELEASE.md  ROADMAP.md  SPEC.md  _mig_trim.py  pipeline.spec  pyproject.toml
.claude/agents/: architect.md  coder.md  software-architect.md  verifier.md
.claude/commands/: arch-check.md  feature.md  review.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
_recut/: list.txt
app/: ROADMAP.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
app/src/: App.svelte  app.css
briefs/: esquiva_conversemos.md  example.yaml  smoke.yaml
config/: providers.yaml  routing.yaml  studio.yaml
config/styles/: cinematic.yaml  crochet.yaml  lego.yaml
context_ai/: feedback_1_sprint_1.md
decisions/: 0011-0020.md  0021-0030.md  README.md
docs/: ai_in_the_loop.html  flujo-de-trabajo.md  oficio-video-ai.md
docs/decisiones/: 0001-0010.md  0031-0040.md  0041-0050.md  0051-0060.md  0061-0070.md  0071-0080.md  0081-0090.md  0091-0100.md  README.md
docs/notas/: feedback-keyframes-ui.md  feedback-sprint-1.md  idea-organic-illustration-pipeline.md  worktree-paralelo.md
docs/roadmap/: app-historico.md  pipeline-historico.md
projects/lego_demo/: README.md  project.yaml  selections.yaml
projects/lego_mix/: project.yaml
scripts/: _bundle_entry.py  _enrich_fracking.py  _fix_fracking_yaml.py  build.py  bundle.py
skills/: README.md
skills/author-project/: SKILL.md
skills/bank-casting/: SKILL.md
skills/keyframe-best-of-n/: SKILL.md
skills/narrative-cut/: SKILL.md
src/md_to_docs/: convert.js  package.json  pnpm-lock.yaml
tests/: conftest.py  test_animatic_strip.py  test_assemble.py  test_audio.py  test_author.py  test_camera_acts.py  test_classifier.py  test_config.py  test_contracts.py  test_coverage_quality.py  test_describe.py  test_export.py  test_film_ribbon.py  test_finishing.py  test_gate.py  test_graphics.py  test_jobs.py  test_keyframes_integrity.py  test_naming.py  test_post.py  test_project.py  test_prompt_compile.py  test_router.py  test_runner_concurrency.py  test_server.py  test_shot_artifact.py  test_shots.py  test_skills_contract.py  test_sound.py  test_spec_advisories.py  test_state.py  test_strategies.py  test_studio.py  test_telemetry.py  test_voice_backend.py
(+83 files in other folders)
