[project]
name = "video-gen-pipeline"
version = "0.1.0"
description = "Industrializacion de video con IA: orquestacion multi-modelo API-only"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
apis = [
    "anthropic>=0.40",
    "fal-client>=0.5",
]
vision = [  # señales numéricas del gate (CLIP/aesthetic). Pesado: torch.
    "torch>=2.2",
    "open-clip-torch>=2.24",
    "pillow>=10.0",
]
studio = [  # app local (D-031): backend FastAPI + servidor
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
edit = [  # edición autónoma (D-042): motion graphics con movis. Trae Qt/opencv (sin torch).
          # mcp-video NO va aquí: corre por uvx desde .mcp.json (no es dep del proyecto).
    "movis>=0.7.1",
    "numpy<2",  # movis 0.7.1 hace float() sobre arrays shape-(1,): numpy 2.x lo rompe.
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
pipeline = "pipeline.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
